# GA_TOPLOT

./: MANUAL  MANUAL.MinSet  README.md  TOPLOT  configure.ac
src/: Makefile  Makefile.am  Makefile.in  alphabet.c  alphabet.h  cath.c  config.h  config.h.in  ga.c  ga.h  gapar.h  getseqs.c  getseqs.h  homstrad.c  huffman.c  huffman.h  lz.c  minset.c  minset.h  minsetpar.h  parameters  parse_args.c  parse_args.h  suffix_tree.c  suffix_tree.h
src/.deps/: alphabet.Po  ga.Po  getseqs.Po  huffman.Po  lz.Po  minset.Po  parse_args.Po  suffix_tree.Po
tests/: Makefile.am  test0.sh
