#===============================================================================
# Makefile.am : for automake
#===============================================================================
#
noinst_DATA =

noinst_SCRIPTS = \
	test0.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

